feat: complete project setup
Add docker-compose.yml.
Rename Contract to Contracts service.
Get DB and App running.